--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "offhook-front-end",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,7 +13,7 @@
   },
   "scripts": {
     "start": "REACT_APP_API_URI='http://localhost:8080' react-scripts start",
-    "build": "REACT_APP_API_URI='/api' react-scripts build",
+    "build": "REACT_APP_API_URI='./api' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
